# mandala

./: LICENSE  README.md  mandala.cabal
app/: Main.hs
app/Exp1/: Mandala.hs
app/Exp2/: Mandala.hs
src/: Mandala.hs
src/Mandala/: Combinators.hs  Math.hs  Production.hs  Types.hs
src/Mandala/Math/: Coordinates.hs  Interval.hs
src/Mandala/Production/: Antialias.hs  DrawGeneric.hs  PNG.hs  ParallelWrite.hs
src/Mandala/Types/: Annotations.hs  Color.hs  Graph.hs  Math.hs
