name:                mandala
version:             0.1.0.0
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -Wall -O2
  build-depends:
    base >= 4.7 && < 5,
    async,
    JuicyPixels,
    vector
  exposed-modules:
    Mandala,
    Mandala.Combinators,
    Mandala.Math,
      Mandala.Math.Coordinates,
      Mandala.Math.Interval,
    Mandala.Production,
      Mandala.Production.Antialias,
      Mandala.Production.DrawGeneric,
      Mandala.Production.ParallelWrite,
      Mandala.Production.PNG,
    Mandala.Types,
      Mandala.Types.Annotations,
      Mandala.Types.Color,
      Mandala.Types.Graph,
      Mandala.Types.Math

executable mandala
  default-language:    Haskell2010
  main-is:             Main.hs
  hs-source-dirs:      app

  -- Fast execution
  ghc-options:         -Wall -O2 -rtsopts -threaded "-with-rtsopts=-N7 -H2G"
  -- Profiled execution
  -- ghc-options:         -Wall -O2 -rtsopts -threaded "-with-rtsopts=-N7 -p -H2G"

  build-depends:
    base,
    mandala,
    optparse-generic,
    vector
